--- a/temples.css
+++ b/temples.css
@@ -22,6 +22,13 @@ nav {
     margin: 0;
 }
 
+nav {
+    max-width: 700px;
+    margin: 1rem auto;
+}
+
+
+
 nav a {
     color: white;
     text-emphasis: none;
