--- a/place.html/style/place.css
+++ b/place.html/style/place.css
@@ -3,7 +3,7 @@
 :root {
     --primary-color: #f0ec17cb;
     --secondary-color: #007a3d;
-    --text-color: #ffffff;
+    --text-color: #0a0a0a;
     --background-color: #f4f4f4;
 }
 
@@ -14,6 +14,15 @@ body {
     background-color: var(--background-color);
     text-align: center;
 }
+
+body {
+    background-image: url('the-lion-king.htm'); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 
 header {
     background-color: var(--primary-color);
