--- a/place.html/style/place.css
+++ b/place.html/style/place.css
@@ -16,7 +16,7 @@ body {
 }
 
 body {
-    background-image: url('the-lion-king.htm'); 
+    background-image: url('image/Togo_lion.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -28,7 +28,7 @@ header {
     background-color: var(--primary-color);
     color: var(--text-color);
     padding: 1rem;
-    font-size: 2rem;
+    font-size: 1rem;
 }
 
 .hero img {
