--- a/place.html/style/place.css
+++ b/place.html/style/place.css
@@ -16,7 +16,7 @@ body {
 }
 
 body {
-    background-image: url('image/Togo_lion.jpg'); 
+    background-image: url('Togo_lion.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
